# rust-opengl

./: Cargo.toml  README.md
lib/gl/: Cargo.toml
render_gl_derive/: Cargo.toml
src/: main.rs  resources.rs  triangle.rs
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs
