[package]
name = "gl"
version = "0.1.0"
authors = ["Alejandro Ríos Jasso <jassoalex97@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
gl_generator = "0.14.0"

[features]
debug = []